--- a/src/index.html
+++ b/src/index.html
@@ -7,7 +7,7 @@
     <title>Homework 10</title>
   </head>
   <body>
-    <input type="text" id="search-box" placeholder="Japan, Germany, U.S.A. etc"/>
+    <input type="text" id="search-box" placeholder="Type country..."/>
     <ul class="country-list"></ul>
     <div class="country-info"></div>
 
